# opensource

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README-new-with-cc-lowered.md  README-new-with-cc.md  README-new.md  README.md
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: embark-oss-ci.yml  validate-projects.yml
content/: beliefs-strategy.md  how-to.md  maintenance-guidelines.md  tooling.md
src/: error.rs  github.rs  main.rs  orbit.rs  policy.rs  slack.rs  validate.rs
src/validate/: context.rs  project.rs  tests.rs
tools/embark-oss/: Cargo.toml  README.md
tools/embark-oss/src/: check_maintainers.rs  codeowners.rs  error.rs  github.rs  main.rs  slack.rs  validate.rs
