[package]
name = "embark-oss"
version = "0.1.0"
authors = ["Embark Open Source <opensource@embark-studios.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Async HTTP client
reqwest = { version = "0.11", default-features = false, features = [
    "json",
    "rustls-tls",
] }
# Futures runtime
tokio = { version = "1.0", features = ["full"] }
# Data de/serialisation
serde = { version = "1.0", features = ["derive"] }
# serde_json is just for the example, not required in general
serde_json = "1.0"
# Command line argument parsing
structopt = "0.3"
# Error handling with contextual information
eyre = "0.6"
# Combinators for futures
futures = "0.3"
# Combinators for iterators
itertools = "0.10"
# Lazily created static values
lazy_static = "1.4"
# Regular expressions for text parsing
regex = "1.4"
